// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> should render Title with default properties 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    color="surface.text.normal.lowContrast"
    fontFamily="text"
    fontSize={600}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={500}
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 28,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Title
  </Text>
</View>
`;

exports[`<Title /> should render Title with variant "large" 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    color="surface.text.subdued.lowContrast"
    fontFamily="text"
    fontSize={800}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={700}
    style={
      Array [
        Object {
          "color": "hsla(217, 18%, 45%, 1)",
          "fontFamily": "Lato",
          "fontSize": 28,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 40,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Title
  </Text>
</View>
`;

exports[`<Title /> should render Title with variant "medium" 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    color="surface.text.muted.lowContrast"
    fontFamily="text"
    fontSize={700}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={600}
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 24,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 32,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Title
  </Text>
</View>
`;

exports[`<Title /> should render Title with variant "small" 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    color="surface.text.normal.lowContrast"
    fontFamily="text"
    fontSize={600}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={500}
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 28,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Title
  </Text>
</View>
`;

exports[`<Title /> should render Title with variant "small" and contrast "high" 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="header"
    color="surface.text.normal.highContrast"
    fontFamily="text"
    fontSize={600}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={500}
    style={
      Array [
        Object {
          "color": "hsla(0, 0%, 100%, 1)",
          "fontFamily": "Lato",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 28,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying Landing Screen Title
  </Text>
</View>
`;
